--- a/public/scss/instructeurs.scss
+++ b/public/scss/instructeurs.scss
@@ -2,41 +2,30 @@
 // @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 
 body {
-
-    h1 {
-        display: flex;
-        justify-content: center;
-    }
+    margin: 5rem;
+    padding: 4rem;
+    border-left-style: solid;
+    border-top-style: solid;
+    border-width: .1rem;
 
     font-size: 1.2rem;
     font-family: 'Kanit';
-    li {
-        margin-left: 30%;
+    ul {
         list-style: none;
+
+        li {
+            list-style: none;
+        }
+        padding: 0;
     }
 
 }
+
 .tableDiv {
-
-   
-
-
-    display: flex;
-    // justify-content: center;
-    align-items: center;
-
-    flex-direction: column;
-
-    // h2 {
-    //     align-self: self-start;
-    // }
-
-   
     table {
-        // border: 2px solid gray;
         border-collapse: collapse;
         margin-top: 1em;
-        text-align: left;
+        text-align: center;
     }
 
     th,
@@ -50,17 +39,7 @@ body {
         font-weight: 900;
     }
 
-
     img {
         width: 2rem;
-
-    }
-
-    div {
-        text-align: center;
-        color: red;
-        border-style: solid;
-        padding: .5rem;
-        width: 28rem;
     }
 }
