--- a/public/css/instructeurs.css
+++ b/public/css/instructeurs.css
@@ -1,26 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap");
 body {
+  margin: 5rem;
+  padding: 4rem;
+  border-left-style: solid;
+  border-top-style: solid;
+  border-width: 0.1rem;
   font-size: 1.2rem;
   font-family: "Kanit";
 }
-body h1 {
-  display: flex;
-  justify-content: center;
+body ul {
+  list-style: none;
+  padding: 0;
 }
-body li {
-  margin-left: 30%;
+body ul li {
   list-style: none;
 }
 
-.tableDiv {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
 .tableDiv table {
   border-collapse: collapse;
   margin-top: 1em;
-  text-align: left;
+  text-align: center;
 }
 .tableDiv th,
 .tableDiv td {
@@ -33,13 +32,6 @@ body li {
 }
 .tableDiv img {
   width: 2rem;
-}
-.tableDiv div {
-  text-align: center;
-  color: red;
-  border-style: solid;
-  padding: 0.5rem;
-  width: 28rem;
 }
 
 /*# sourceMappingURL=instructeurs.css.map */
